--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="assets/calculator.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="assets/calculator.css" type="text/css">
+    <script src="assets/app.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="assets/style.css" type="text/css">
     <title>calculator</title>
 </head>
 <body>
